--- a/reserveTime/static/css/style.css
+++ b/reserveTime/static/css/style.css
@@ -425,7 +425,7 @@ footer{
 }
 
 #company-admin-body{
-    background-color: #E9F4FA;
+    background-color: #f7f7f7;
 }
 .color-w{
     color: white !important;
