--- a/reserveTime/core/templates/company-admin-page.html
+++ b/reserveTime/core/templates/company-admin-page.html
@@ -22,46 +22,7 @@
 </head>
 <body id="company-admin-body">
     
-    <header>
-        <div class="container custom-container shadow">
-            <div class="row justify-content-between">
-                <div class="left side">
-                    <a href="{% url 'core:home' %}">
-                        <img src="{% static 'images/logo.png' %}" width="250px" alt="">
-                    </a>
-                </div>
-                <div class="right">
-                    <a href="{% url 'account:user-profile' user.pk %}" class="d-flex user-profile-link">
-                        <div class="side">
-                            {% if user.profile_img %}
-                            <img src="{{user.profile_img.url}}" width="50px" alt="Profile photo">
-                            {% else %}
-                            <img src="{% static 'images/profile.png' %}" width="50px" alt="Profile photo">
-                            {% endif %}
-                            <div class="d-flex flex-direction-column ml-2">
-                                <span class="mt-1">Welcome</span>
-                                <h5 class="bold">{{user.first_name}} {{user.last_name}}</h5>
-                            </div>
-                        </div>
-                    </a>
-                    <div class="notification">  
-                        <div class="d-flex">
-                            <span>Notifications</span>
-                            <button type="button" class="ml-2 header-btn"><i class="far fa-bell"></i></button>
-                        </div>
-                        <div class="custom-drop-down shadow p-3" style="display: none;">
-                            <div class="triangle"></div>
-                            <span>Notifications</span>
-                            <p class="pl-2 pr-2">Nothing to see here, you’re all caught up!</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            
-        </div>
-        
-    </header>
-
+    {% include 'partials/company-header.html' %}
   
     <main>
         <div class="container mt-3 company-admin-container">
@@ -148,10 +109,7 @@
     <script src="{% static 'js/main.js' %}"></script>
     <script>
         $(document).ready(function(){
-            $('.header-btn').click(function(){
-                // $('.custom-drop-down').hide()
-                $(this).siblings('.custom-drop-down').slideToggle()
-            });
+           
             var width = $('.link-box').width()
             $('.link-box').hover(function(){
                 var height = $(this).height()
