--- a/reserveTime/core/templates/partials/company-header.html
+++ b/reserveTime/core/templates/partials/company-header.html
@@ -1,46 +1,29 @@
 {% load static custom_tags %}
 
-<header class="mt-4">
-    <div class="container custom-container">
+<header >
+    <div class="container custom-container shadow">
         <div class="row justify-content-between">
             <div class="left side">
                 <a href="{% url 'core:home' %}">
-                    <img src="{% static 'images/logo.png' %}" width="200px" alt="">
+                    <img src="{% static 'images/logo.png' %}" width="230px" alt="">
                 </a>
             </div>
             <div class="right side">
                 
-                {% if request.user.is_authenticated %}
-                    <div class="user-profile border-right pr-2">
-                        <span class="header-btn" style="cursor:pointer;"> Hi, {{request.user.first_name|capfirst}} <i class="fas fa-chevron-down" id="arrow-down"></i></span>
-                        <div class="custom-drop-down shadow box1" style="display: none;">
-                            <div class="triangle"></div>
-                            <!-- <span>Hello, {{request.user.first_name|capfirst}}</span> -->
-                            <ul>
-                                {% if request.user.is_company %}
-                                    <li><a href="{% url 'account:company-profile' user.pk %}">Company Profile</a></li>
-                                {% else %}
-                                    <li><a href="{% url 'account:user-profile' user.pk %}">My Profile</a></li>
-                                {% endif %}
-                                <li><a href="{% url 'account:user-profile' request.user.pk %}">My Dining History</a></li>
-                                <li><a href="{% url 'core:user-saved-restaurants' request.user.pk %}">My Saved Restaurants</a></li>
-                                <li><a href="{% url 'account:logout' %}">Sign out</a></li>
-                            </ul>
+                <a href="{% url 'account:user-profile' user.pk %}" class="d-flex user-profile-link">
+                    <div class="side">
+                        {% if user.profile_img %}
+                        <img src="{{user.profile_img.url}}" width="50px" alt="Profile photo">
+                        {% else %}
+                        <img src="{% static 'images/profile.png' %}" width="50px" alt="Profile photo">
+                        {% endif %}
+                        <div class="d-flex flex-direction-column ml-2">
+                            <span class="mt-1">Welcome</span>
+                            <h5 class="bold">{{user.first_name}} {{user.last_name}}</h5>
                         </div>
                     </div>
-                {% else %}
-                    <button type="button" class="btn register-btn mr-2" data-toggle="modal" data-target="#exampleModal">Sign Up</button>
-                    <a href="{% url 'account:login' %}" class="btn login-btn bold">Sign In</a>
-                {% endif %}
+                </a>
                 
-                <div class="reserve-table">
-                    <button type="button" class="header-btn"><i class="far fa-calendar"></i></button>
-                    <div class="custom-drop-down p-3" style="display: none;">
-                        <div class="triangle"></div>
-                        <span>Upcoming reservations</span>
-                        <p class="pl-2 pr-2">You have no upcoming reservations</p>
-                    </div>
-                </div>
                 {% notification request.user as notifications %} 
                 <div class="notification">
                     <button type="button" class="header-btn notification-btn">
@@ -49,7 +32,7 @@
                         {% endif %}
                         <i class="far fa-bell"></i>
                     </button>
-                    <div class="custom-drop-down box3 p-3" style="display: none;">
+                    <div class="custom-drop-down box3 p-3 shadow" style="display: none;">
                         <div class="triangle"></div>
                         <span class="pb-3">Notifications</span>
                         
