filter by cuisines

--- a/reserveTime/core/templates/company-infos.html
+++ b/reserveTime/core/templates/company-infos.html
@@ -87,8 +87,8 @@
                         <div class="col-lg-6">
                             <div class="form-group">
                                 <label for="formGroupExampleInput">Cuisines</label>
-                                {{form.cuisines}}
-                                {{form.cuisines.errors}}
+                                {{form.cuisine}}
+                                {{form.cuisine.errors}}
                             </div>
                         </div>
                         <div class="col-lg-6">
