--- a/reserveTime/core/templates/company-profile.html
+++ b/reserveTime/core/templates/company-profile.html
@@ -98,14 +98,14 @@
                         <div class="row menu-box">
                             <div class="menu">
                                 <ul class="menu-list">
-                                    <li><a href="#overview">Overview</a></li>
-                                    <li><a href="#photos">Photos</a></li>
-                                    <li><a href="#3">Menu</a></li>
-                                    <li><a href="#4">Review</a></li>
+                                    <li><a href="#overview" id='link1'>Overview</a></li>
+                                    <li><a href="#link" id='link2'>Photos</a></li>
+                                    <li><a href="#3" id='link3'>Menu</a></li>
+                                    <li><a href="#4" id='link4'>Review</a></li>
                                 </ul>
                             </div>
                         </div>
-                        <div class="row overview" id="overview">
+                        <div class="row overview" id="overview" name = "link1">
                             <h1 class="company-name bold">{{company.company_name}}</h1>
                             <div style="display: none;" id="company_id">{{company.pk}}</div>
                             <div class="d-flex pl-3">
@@ -238,7 +238,7 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-8">
-                        <div class="row photos pb-3" name="photos">
+                        <div id="2" class="row photos pb-3" name="link2" >
                             <h3 class="full pl-3 pb-3 bottom-border">{{photos.count}} Photos</h3>
                             <div class="menu-box full mb-3">
                                 <div class="photo-menu pl-3">
@@ -251,7 +251,7 @@
                                     </ul>
                                 </div>
                             </div>
-                            <div class="row photo-gallery row-cols-4 m-auto" id="photos">
+                            <div class="row photo-gallery row-cols-4 m-auto" >
                                 {% for photo in photos %}
                                     <div class="col mb-2 photo-box">
                                         <a data-fancybox="gallery" href="{{photo.photo.url}}"><img data-type="{{photo.photo_type}}" src="{{photo.photo.url}}"></a>
@@ -259,7 +259,7 @@
                                 {% endfor %}
                             </div>
                         </div>
-                        <div class="row menu-section" id="3">
+                        <div class="row menu-section" id="3" name = "link3">
                             <div class="menu-container mb-3 collapse-menu">
                                 <h3 class="full bottom-border pb-3 pl-3">Menu</h3>
                                 <div class="row">
@@ -330,7 +330,7 @@
                                 </div>
                                 <div class="info-text">
                                     <span>Cuisines</span>
-                                    <p>{% if company.cuisines %}{{company.cuisines}} {% else %} .... {% endif %} </p>
+                                    <p>{% if company.cuisine %}{{company.cuisine}} {% else %} .... {% endif %} </p>
                                 </div>
                             </div>
                             <div class="col-6 d-flex">
@@ -411,7 +411,7 @@
                 
                
     
-                <div class="row comments-section" id="4">
+                <div class="row comments-section" id="4" name='link4'>
                     <h3 class="full bottom-border bold pl-5 pb-2 mt-5">What {{comments|length}} people are saying</h3>
                     <div class="row mb-5">
                         <div class="d-column pl-5">
@@ -645,6 +645,7 @@
      </script>
 
     <script>
+        
         $('#FindTableForm').on('submit', function(e){
             e.preventDefault()
             
@@ -750,10 +751,32 @@
 
        
     </script>
-
-  
-
     <script>
+        function scrollToAnchor(aid){
+            var aTag = $("div[name='"+ aid +"']");
+            $('html,body').animate({scrollTop: aTag.offset().top},'slow');
+        }
+        function inlineLink(id){
+            $(`${id}`).click(function() {
+                if(id == '#link1'){
+                    scrollToAnchor('link1');
+                }
+                else if(id == '#link2'){
+                    scrollToAnchor('link2');
+                }
+                else if(id == '#link3'){
+                    scrollToAnchor('link3');
+                }
+                else if(id == '#link4'){
+                    scrollToAnchor('link4');
+                }
+            });
+        }
+        inlineLink('#link1')
+        inlineLink('#link2')
+        inlineLink('#link3')
+        inlineLink('#link4')
+
         $(document).ready(function(){
 
             function getRandomSize(min, max) {
